--- a/public/html/index.html
+++ b/public/html/index.html
@@ -42,17 +42,27 @@
 </head>
 
 <body>
-<!-- Add -->
+  <!-- Add -->
+  <div class="container">
+    <h2 style="margin-bottom: 20px;margin-top: 20px;">Create Credential Template</h2>
+    <!--  title -->
+    <input class="form-control template-field" type="text" id="credential_title" name="credential_title"
+      placeholder="Enter Credential Title" style="margin-bottom: 20px; width: 500px" />
 
-  <!-- generate input fields -->
-  <form id="show_fields" class="container">
-    <button type="button" id="add_field" class="btn btn-primary">
-      <i class="fa-solid fa-plus"></i> Add Field</i>
-    </button>
-   
-    <input id="submit" type="submit" class="btn btn-success" />
+    <!-- generate input fields -->
+    <form id="show_fields" class="container" style="margin-top: 10px; margin-left: -10px; ">
+
+      <!-- add field -->
+      <button type="button" id="add_field" class="btn btn-primary" style="margin-bottom: 10px;">
+        <i class="fa-solid fa-plus"></i> Add Field</i>
+      </button>
+
+      <!-- submit -->
+      <button input id="submit" type="submit" class="btn btn-primary" style="margin-bottom: 10px;"><i class="fa-solid fa-check"></i> Save </button>
+
     </form>
- <!-- save -->
+  </div>
+
 </body>
 
 </html>
