--- a/public/html/index.html
+++ b/public/html/index.html
@@ -58,11 +58,48 @@
       </button>
 
       <!-- submit -->
-      <button input id="submit" type="submit" class="btn btn-primary" style="margin-bottom: 10px;"><i class="fa-solid fa-check"></i> Save </button>
+      <button input id="submit" type="submit" class="btn btn-primary" style="margin-bottom: 10px;"><i
+          class="fa-solid fa-check"></i> Save </button>
 
     </form>
   </div>
 
+  <!-- generic modal for display results -->
+  <div id="modal" class="modal" tabindex="-1">
+    <div class="modal-dialog modal-md">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modal_header"></h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div id="modal_body"></div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Okay</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- generic confirmation modal for display results -->
+  <div id="confirmation_modal" class="modal" tabindex="-1">
+    <div class="modal-dialog modal-md">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="confirmation_modal_header"></h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div id="confirmation_modal_body"></div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-primary" id="modal_button_confirm">Confirm</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
