--- a/public/html/index.html
+++ b/public/html/index.html
@@ -47,10 +47,10 @@
     <h2 style="margin-bottom: 20px;margin-top: 20px;">Create Credential Template</h2>
     <!--  title -->
     <input class="form-control template-field" type="text" id="credential_title" name="credential_title"
-      placeholder="Enter Credential Title" style="margin-bottom: 20px; width: 500px" />
+      placeholder="Enter Credential Title" style="margin-bottom: 20px; width: 500px"/>
 
     <!-- generate input fields -->
-    <form id="show_fields" class="container" style="margin-top: 10px; margin-left: -10px; ">
+    <form id="show_fields" class="container" style="margin-top: 10px; margin-left: -10px; " novalidate>
 
       <!-- add field -->
       <button type="button" id="add_field" class="btn btn-primary" style="margin-bottom: 10px;">
