updates to styling

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -43,12 +43,12 @@
 
 <body>
   <!-- Add -->
-  <div class="container">
+  <div class="container col-8">
     <h2 style="margin-bottom: 20px;margin-top: 20px;">Create Credential Template</h2>
     <!--  title -->
     <div class="form-floating">
       <input class="form-control template-field" type="text" id="credential_title" name="credential_title"
-      placeholder="Enter Credential Title" style="margin-bottom: 20px; width: 500px"/>
+      placeholder="Enter Credential Title" style="margin-bottom: 20px; "/>
       <label>Enter Credential Title</label>
     </div>
     
