added optional toggle to template creation

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -43,7 +43,7 @@
 
 <body>
   <!-- Add -->
-  <div class="container col-8">
+  <div class="container col-12">
     <h2 style="margin-bottom: 20px;margin-top: 20px;">Create Credential Template</h2>
     <!--  title -->
     <div class="form-floating">
@@ -54,7 +54,7 @@
     
 
     <!-- generate input fields -->
-    <form id="show_fields" class="container" style="margin-top: 10px; margin-left: -10px; " novalidate>
+    <form id="show_fields" class="form-floating" style="margin-top: 10px;" novalidate>
 
       <!-- add field -->
       <button type="button" id="add_field" class="btn btn-primary" style="margin-bottom: 10px;">
